Redid front-end a little bit. Clock now counts down cleanly to zero. Still need to wrap countdown function in start/stop function.

--- a/style.css
+++ b/style.css
@@ -33,6 +33,11 @@ p {
   justify-content: center;
 }
 
+#timeField {
+  display: flex;
+  flex: row;
+}
+
 @media screen and (min-width: 1000px) {
   p {
     font-size: 100px;
